# juner_os

./: .gitignore  Cargo.toml  Makefile  OVMF_VARS-1024x768.fd  README.md  README_CN_ZH.md  README_OLD.md  Readme_zh_CN.md  build.py  gdb.sh  grammar.md  grammar_zh.md  touchme.sh  x86_64-none-efi.json
.cargo/: config
bootloader/: cargo.toml
bootloader/.cargo/: config
bootloader/src/: lib.rs  main.rs  page_table.rs
kernel/: cargo.toml
kernel/.cargo/: amd64.json  config  linker-amd64.ld
kernel/src/: lang.rs  main.rs  shell.rs
kernel/src/board/: acpi_table.rs  cpu.rs  mod.rs  mouse.rs
kernel/src/console/: io.rs  mod.rs
kernel/src/drivers/: mod.rs  provider.rs
kernel/src/drivers/block/: ahci.rs  mod.rs
kernel/src/drivers/bus/: pci.rs
kernel/src/drivers/gpu/: mod.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/fs/: inode_ext.rs  mod.rs
kernel/src/interrupts/: gdt.rs  mod.rs
kernel/src/mal/: core.rs  env.rs  mod.rs  reader.rs  types.rs
kernel/src/memory/: heap.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs
src/: allocator.rs  interrupts.rs  lisp.rs  main.rs  memory.rs  serial.rs  stdio.rs  vga_buffer.rs
src/mal/: core.rs  env.rs  mod.rs  printer.rs  reader.rs  shell.rs  types.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
src/test/: input.rs  mod.rs  stdout.rs
user/: core.jmal  entry.jmal  hello.jmal
user/mal/: hello.mal
