[package]
name = "juner_os"
version = "0.1.0"
authors = ["zhouzihao <zhouzihao@baffedu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.0"
pic8259_simple = "0.2.0"
uart_16550 = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.5"
log = "0.4"
hashbrown = "0.9.0"
lazy_static = { version = "1.4.0",features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
