[package]
name = "juner-os"
version = "0.1.0"
authors = ["zhouzihao <1042181618@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.5.0"
uefi-services = "0.2.5"
log = { version = "0.4.11", default-features = false }
x86_64 = "0.12.1"


[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]